# Reservoir_Computing

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  README.md  __main__.py  cli.py  main.py  pyproject.toml
benchmarks/: BENCHMARK_QRC.md  Result.MD  batch_benchmark.py  batch_results.csv  extract_optuna_results.py  filtered_optuna_results.csv  fix_duplicate_numbers.py  measure.decay.py  measure_qiskit_depth_corrected.py  measure_quantum_logic.py  optimize_qrc.py  optimize_qrc_lorenz.py  optimize_qrc_mnist.db  optimize_qrc_mnist.py  optimize_qrc_multi_seed.py  optimize_rc.db  optimize_rc.py  optimize_rc_mean_vpt.db  optimize_rc_mnist.py  optimize_rc_multi_seed.py  optuna_qrc.db  optuna_qrc_coherent_drive.db  optuna_qrc_nonetype.db  optuna_qrc_nonetype_mean_vpt.db  optuna_qrc_random_projection.db  patch_optuna_db.py  prune_duplicate_trials.py  requeue_trials.py  sparse_benchmark.py  sparse_results.csv  test_exp_opt.py  test_fusion.py  test_slice_opt.py  view_optuna_results.ipynb
cli/: main.py
configs/: README.md  fnn_config.py  lorenz_demo_config.json  mackey_glass_demo_config.json  sine_wave_demo_config.json
configs/core/: __init__.py  composer.py  config.py
configs/datasets/: datasets.json  lorenz.json  mackey_glass.json  sine_wave.json
configs/models/: basic_reservoir.json  classic_standard.json  gatebased_quantum.json  quantum_advanced.json  quantum_standard.json  reservoir_complex.json  reservoir_large.json  reservoir_standard.json  shared_reservoir_params.json
configs/training/: raw_standard.json  robust.json  standard.json  windowed.json
data/: __init__.py  generators.py
docs/: ARCHITECTURE.md  PLAN.md  TROUBLESHOOTING.md
examples/: __init__.py  demo.py
experiments/: __init__.py  dynamic_runner.py
models/: __init__.py
models/reservoir/: __init__.py  analog_quantum.py  base_reservoir.py  classical.py  config.py  gatebased_quantum.py  quantum.py
outputs/: mackey_glass_aq_prediction_6_config.json  mackey_glass_gq_prediction_4_4_config.json  mackey_glass_prediction_16_config.json  mackey_glass_prediction_18_config.json  mackey_glass_prediction_config.json  mackey_glass_prediction_nr100_config.json  mackey_glass_prediction_nr100_in1_config.json  mackey_glass_prediction_nr10_in1_config.json  mackey_glass_prediction_nr16_config.json  mackey_glass_prediction_nr16_in1_config.json  mackey_glass_prediction_nr18_in1_config.json  mackey_glass_prediction_nr30_config.json  mackey_glass_prediction_nr30_in1_config.json  mackey_glass_quantum_prediction_4_4_config.json  mackey_glass_quantum_prediction_config.json  mnist_fnn_b_dash_50.msgpack  mnist_fnn_emulation_nr100_config.json  mnist_fnn_raw_10.json  mnist_fnn_raw_10.msgpack  mnist_fnn_raw_30.json  mnist_fnn_raw_30.msgpack  mnist_fnn_raw_4.json  mnist_fnn_raw_4.msgpack  mnist_fnn_raw_5.json  mnist_fnn_raw_5.msgpack  mnist_fnn_raw_h100_vs_res100.msgpack  mnist_fnn_raw_h10_vs_res100.json  mnist_fnn_raw_h10_vs_res100.msgpack  mnist_prediction_16_100_config.json  mnist_prediction_28_100_config.json  mnist_prediction_config.json  mnist_prediction_nr1000_in28_l1000_config.json  mnist_prediction_raw_nr100_config.json  mnist_prediction_raw_nr100_in28_config.json  mnist_prediction_raw_nr100_in28_tf0100_config.json  mnist_prediction_raw_nr100_in28_tf1000_config.json  mnist_prediction_raw_nr1200_config.json  mnist_prediction_raw_nr1200_in28_tf0100_config.json  mnist_prediction_raw_nr1200_in28_tf1000_config.json  mnist_prediction_raw_nr500_config.json  (+6 more)
outputs/mackey_glass/: mackey_glass_prediction_nr10_config.json  mackey_glass_prediction_nr16_config.json  mackey_glass_prediction_nr18_config.json
outputs/mnist/: mnist_fnn_raw_h100_vs_res100.json  mnist_fnn_raw_h100_vs_res100.msgpack  mnist_fnn_raw_h100_vs_res100_emulation_config.json  mnist_fnn_raw_h300_vs_res100.json  mnist_fnn_raw_h300_vs_res100.msgpack  mnist_fnn_raw_h300_vs_res100_emulation_config.json  mnist_fnn_raw_h500_vs_res100.json  mnist_fnn_raw_h500_vs_res100_emulation_config.json  mnist_prediction_raw_nr100_config.json  mnist_prediction_raw_nr1200_config.json  mnist_prediction_raw_nr500_config.json  mnist_prediction_raw_nr600_config.json
pipelines/: __init__.py  builders.py  classical_reservoir_pipeline.py  data_preparation.py  dispatchers.py  dynamic_runner.py  experiment_utils.py  fnn_b_dash_pipeline.py  fnn_pipeline.py  gate_based_quantum_pipeline.py  gatebased_quantum_pipeline.py  generators.py  generic_runner.py  gpu_utils.py  jax_config.py  naming.py  plotting.py  run.py
pipelines/datasets/: mnist_loader.py
presets/: README.md
presets/datasets/: datasets.json
presets/models/: analog_quantum.json  gatebased_quantum.json
presets/training/: standard.json
reservoir/: __init__.py  __main__.py  cli.py  config.py  data.py  metrics.py  plotting.py  preprocessing.py  reservoir_computer.py  runner.py  scripts.py  utils.py
reservoirs/preprocess/: aggregator.py  design_matrix.py
reservoirs/readout/: base.py  ridge_numpy.py
reservoirs/utils/: __init__.py  rng.py
scripts/: install_cuda.sh  lint_imports.py  qrc_sweep.py  rebuild_test.sh  run_gpu.sh  run_mackey.sh  run_mnist_classic.sh  run_mnist_fnn.sh  run_mnist_fnn_raw.sh  run_mnist_raw.sh
scripts/experiments/: qrc_lambda_seed_results.csv  qrc_lambda_seed_search.py
src/core_lib/: cli.py
src/core_lib/components/: __init__.py
src/core_lib/core/: composer.py  config.py  identifiers.py
src/reservoir/: README.md  __init__.py
test/: test_edge_cases.py  test_eigenvalues_comparison.py  test_gpu_comparison.py  test_simple.py
tests/: __init__.py  gpu_test_utils.py  test_analog_quantum.py  test_cuda.py  test_edge_cases.py  test_eigenvalues_comparison.py  test_generators.py  test_gpu_comparison.py  test_gpu_smoke.py  test_gpu_utils.py  test_metrics.py  test_preprocessing.py  test_quantum_reservoir.py  test_registry_integrity.py  test_simple.py
tests/integration/: test_matrix.py
tests/pipelines/: test_dynamic_runner.py  test_fnn_pipeline.py  test_reservoir_pipeline.py  test_rnn_pipeline.py
tests/unit/: test_poly_ridge.py  test_quantum_functional.py
utils/: gpu_utils.py  plotting.py
(+180 files in other folders)
