[project]
name = "reservoir"
version = "0.1.0"
description = "JAX-based Reservoir Computing with GPU acceleration"
authors = [
    { name = "yoshi", email = "yossyf1147@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    #visualization
    "matplotlib",
    "tqdm",
    #ML
    "jax[cuda12]",
    "jaxlib",
    "optax",
    "flax",
    #Type scrict
    "pyrefly",
    "beartype",
    "jaxtyping",
    #Quantum
    "tensorcircuit-ng[jax]",
    #mnist dataset
    "torch", #CPU version
    "torchvision", #CPU version
    #test
    "pandas",
    "pandas-stubs",
    "pytest",
    # CUDA GPU is not recognized with the latest cusparse(12.5.9.5, 12.5.10.65)
    # RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found. so 12.5.8.93
    "nvidia-cusparse-cu12==12.5.8.93",
    # hyper parameter optimization
    "optuna",
    "optuna-dashboard",
]


[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reservoir"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[[tool.uv.index]]
name = "jax_cuda_releases"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
tensorcircuit-ng = { git = "https://github.com/tensorcircuit/tensorcircuit-ng.git" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.pyrefly]
# 解析対象のディレクトリ
project-includes = ["**/*.py*"]

# 厳格モードをON（暗黙の型解決を許さない）
strict = true

# エージェントや開発者のサボり（Any / object）を許さない設定
report-missing-type-stubs = true
report-any = "error"                # Any型の使用をエラーとして弾く
report-explicit-any = "error"       # typing.Any の明示的な使用も弾く
report-implicit-override = "error"
untyped-def-behavior = "check-and-infer-return-type"
report-missing-type-args = "error"