[project]
name = "reservoir"
version = "0.1.0"
description = "JAX-based Reservoir Computing with GPU acceleration"
authors = [
    { name = "yoshi", email = "yossyf1147@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    #visualization
    "matplotlib",
    "tqdm",
    #ML
    "jax[cuda12]",
    "jaxlib",
    "optax",
    "flax",
    #Type scrict
    "pyrefly",
    "beartype",
    "jaxtyping",
    "ruff",
    #Quantum
    "tensorcircuit-ng[jax]",
    #mnist dataset
    "torch", #CPU version
    "torchvision", #CPU version
    #test
    "pandas",
    "pandas-stubs",
    "pytest",
    # CUDA GPU is not recognized with the latest cusparse(12.5.9.5, 12.5.10.65)
    # RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found. so 12.5.8.93
    "nvidia-cusparse-cu12==12.5.8.93",
    # hyper parameter optimization
    "optuna",
    "optuna-dashboard",
]


[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reservoir"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[[tool.uv.index]]
name = "jax_cuda_releases"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
tensorcircuit-ng = { git = "https://github.com/tensorcircuit/tensorcircuit-ng.git" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.pyrefly]
project-includes = ["**/*.py*"]

# ==========================================
# 1. 基本の厳格化（ユーザー設定済）
# ==========================================
strict = true
untyped-def-behavior = "check-and-infer-return-type"

# ==========================================
# 2. Any / object / 型引数不足 の明示的な使用を許さない（ユーザー設定済）
# ==========================================
report-any = "error"
report-explicit-any = "error"
report-implicit-override = "error"
report-missing-type-args = "error"

# ==========================================
# 3. 【追加】外部ライブラリ由来の「暗黙のAny (Unknown)」を完全封鎖
# ==========================================
# サードパーティの関数が型推論できず Any を返してきた場合、
# それを変数に入れたり引数に渡したりする行為そのものをエラーにします。
report-unknown-variable-type = "error"
report-unknown-parameter-type = "error"
report-unknown-argument-type = "error"
report-unknown-member-type = "error"

# ==========================================
# 4. 【追加】開発者の「コメントによる逃げ」を封鎖
# ==========================================
# 「とりあえず # type: ignore でエラー消しとこ」というサボりを監視します。
# 本当にエラーが出ていない行に ignore を書くと逆に怒られます。
report-unnecessary-type-ignore = "error"
report-unnecessary-cast = "error"

# ==========================================
# 5. 【修正】インポートとスタブの厳格化
# ==========================================
report-missing-type-stubs = "error"  # ※ true ではなく "error" にレベルを合わせる
report-missing-imports = "error"

# ==========================================
# 【追加】Pyrefly 究極の論理チェック
# ==========================================
# 1. 戻り値の無視を禁止 (Functional Strictness)
# 関数が値を返しているのに、変数に代入せずに捨てた場合にエラーにします。
# 例: `scaler.transform(X)` と書いて代入し忘れるバグ（MLあるある）を物理的に防ぎます。
reportUnusedCallResult = "error"

# 2. 無意味な比較の禁止 (Logic Check)
# 既に Pyrefly が「これは絶対に None ではない」と推論できているのに、
# 念のため `if x is not None:` と書くと「そのチェックは無意味だ！」と怒られます。
# 先ほどの「過剰な防衛コード」を型チェッカーレベルで焼き払います。
reportUnnecessaryComparison = "error"

# 3. 未到達コードの禁止
# 絶対に実行されない if 文の分岐（デッドコード）を許しません。
reportUnreachable = "error"


# Ruff全体の設定
[tool.ruff]
target-version = "py313"

# Linter個別の設定
[tool.ruff.lint]
extend-select = [
    "UP", "TCH", "S101",

    # 1. B (flake8-bugbear): 潜在的なバグの温床を破壊
    # def func(data=[]): のようなミュータブルなデフォルト引数や、
    # ループ変数のスコープ漏れなど、Python特有の罠をすべて弾きます。
    "B",

    # 2. BLE / TRY (Blind Except / Tryceratops): 例外の握りつぶし禁止
    # `except Exception:` や `except:` を完全に禁止します。
    # OOMやキーエラーをサイレントに握りつぶすことを防ぎ、必ず `except ValueError:` のように明示させます。
    "BLE", "TRY",

    # 3. ARG (flake8-unused-arguments): 未使用引数の禁止
    # 関数で引数を定義したのに、中で使っていない場合に怒られます。
    # （インターフェースとして必要な場合は `_` をプレフィックスにすれば回避可能）
    "ARG",

    # 5. PIE (flake8-pie): 無駄なコードの排除
    # passだけの不必要なブロックなどを禁止します。
    "PIE"
]
extend-ignore = [
    "TRY003", # 標準例外（ValueError等）への長文メッセージ/f-stringの直接指定を許可
    "ARG002", # MLインターフェース慣習: 親クラスのシグネチャを保持するため未使用メソッド引数を許可 (scikit-learn convention)
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
